--- a/Video Games/View/Base.lproj/Main.storyboard
+++ b/Video Games/View/Base.lproj/Main.storyboard
@@ -33,10 +33,10 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SW7-Zd-NaG">
                                 <rect key="frame" x="19.5" y="303" width="375" height="290"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <color key="backgroundColor" systemColor="labelColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="375" id="15k-qQ-MtR"/>
-                                    <constraint firstAttribute="height" constant="290" id="Qum-ub-bJG"/>
+                                    <constraint firstAttribute="width" constant="375" id="bt9-FJ-zqT"/>
+                                    <constraint firstAttribute="height" constant="290" id="l9c-20-Hy5"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -53,15 +53,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fOU-bB-wmN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1526.0869565217392" y="424.55357142857139"/>
+            <point key="canvasLocation" x="-712" y="422"/>
         </scene>
         <!--Page View Controller-->
         <scene sceneID="RF0-cQ-t4W">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Iao-1p-5fq" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q30-0h-5qr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Iao-1p-5fq" sceneMemberID="viewController"/>
             </objects>
-            <point key="canvasLocation" x="-732" y="322"/>
+            <point key="canvasLocation" x="-33" y="873"/>
         </scene>
         <!--Item-->
         <scene sceneID="d4w-A7-gQL">
@@ -71,68 +71,64 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XqU-ix-JeV">
-                                <rect key="frame" x="20" y="433.5" width="374" height="379.5"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="374" id="LxQ-PM-HbR"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mmO-ek-p5A">
-                                    <size key="itemSize" width="374" height="110"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
-                                </collectionViewFlowLayout>
-                                <cells/>
-                            </collectionView>
-                            <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pA8-CS-Lna">
+                            <textField autoresizesSubviews="NO" opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search..." textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="pA8-CS-Lna">
                                 <rect key="frame" x="20" y="54" width="374" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="374" id="Awf-2h-iqb"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search" textContentType="nickname"/>
+                                <connections>
+                                    <action selector="searchTextChanged:" destination="5AU-2S-C2Y" eventType="editingChanged" id="gEq-yT-lrJ"/>
+                                </connections>
                             </textField>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5a2-nW-ud9">
-                                <rect key="frame" x="20" y="96" width="374" height="317.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="HYf-EC-Sdq">
+                                <rect key="frame" x="0.0" y="95" width="414" height="718"/>
                                 <subviews>
-                                    <containerView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DCh-tJ-450">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="290"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="290" id="Q2g-OP-FuF"/>
-                                            <constraint firstAttribute="width" constant="374" id="f9p-1T-ddu"/>
-                                        </constraints>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                <integer key="value" value="20"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <segue destination="Iao-1p-5fq" kind="embed" id="Vuz-r2-HZQ"/>
-                                        </connections>
-                                    </containerView>
-                                    <pageControl contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Ehk-mf-67t">
-                                        <rect key="frame" x="0.0" y="290" width="374" height="27.5"/>
-                                        <color key="tintColor" systemColor="labelColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="374" id="GVp-bt-VwP"/>
-                                        </constraints>
-                                        <color key="pageIndicatorTintColor" systemColor="placeholderTextColor"/>
-                                    </pageControl>
+                                    <stackView autoresizesSubviews="NO" opaque="NO" contentMode="scaleAspectFit" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5a2-nW-ud9">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="354.5"/>
+                                        <subviews>
+                                            <containerView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DCh-tJ-450">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="290"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                        <integer key="value" value="20"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <segue destination="Iao-1p-5fq" kind="embed" id="Vuz-r2-HZQ"/>
+                                                </connections>
+                                            </containerView>
+                                            <pageControl contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Ehk-mf-67t">
+                                                <rect key="frame" x="0.0" y="290" width="414" height="64.5"/>
+                                                <color key="tintColor" systemColor="labelColor"/>
+                                                <color key="pageIndicatorTintColor" systemColor="placeholderTextColor"/>
+                                            </pageControl>
+                                        </subviews>
+                                    </stackView>
+                                    <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XqU-ix-JeV">
+                                        <rect key="frame" x="0.0" y="363.5" width="414" height="354.5"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mmO-ek-p5A">
+                                            <size key="itemSize" width="374" height="110"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                        </collectionViewFlowLayout>
+                                        <cells/>
+                                    </collectionView>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="isA-J2-C0l"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="XqU-ix-JeV" firstAttribute="bottom" secondItem="isA-J2-C0l" secondAttribute="bottom" id="6b1-A3-r3Q"/>
-                            <constraint firstItem="pA8-CS-Lna" firstAttribute="top" secondItem="isA-J2-C0l" secondAttribute="top" constant="10" id="DSD-De-ItO"/>
-                            <constraint firstItem="5a2-nW-ud9" firstAttribute="top" secondItem="pA8-CS-Lna" secondAttribute="bottom" constant="8" symbolic="YES" id="IMz-U4-KC5"/>
-                            <constraint firstItem="XqU-ix-JeV" firstAttribute="top" secondItem="5a2-nW-ud9" secondAttribute="bottom" constant="20" id="biW-Lp-11f"/>
-                            <constraint firstItem="pA8-CS-Lna" firstAttribute="centerX" secondItem="K0s-fn-EOB" secondAttribute="centerX" id="tJd-Kt-JHH"/>
-                            <constraint firstItem="pA8-CS-Lna" firstAttribute="leading" secondItem="5a2-nW-ud9" secondAttribute="leading" id="w0X-YB-S10"/>
-                            <constraint firstItem="XqU-ix-JeV" firstAttribute="centerX" secondItem="K0s-fn-EOB" secondAttribute="centerX" id="xrf-FL-xMg"/>
+                            <constraint firstItem="HYf-EC-Sdq" firstAttribute="top" secondItem="pA8-CS-Lna" secondAttribute="bottom" constant="7" id="8he-sQ-9fo"/>
+                            <constraint firstItem="pA8-CS-Lna" firstAttribute="top" secondItem="isA-J2-C0l" secondAttribute="top" constant="10" id="9tj-J8-MLY"/>
+                            <constraint firstItem="isA-J2-C0l" firstAttribute="bottom" secondItem="HYf-EC-Sdq" secondAttribute="bottom" id="E6N-KQ-07u"/>
+                            <constraint firstItem="HYf-EC-Sdq" firstAttribute="trailing" secondItem="isA-J2-C0l" secondAttribute="trailing" id="SMV-xc-r4l"/>
+                            <constraint firstItem="pA8-CS-Lna" firstAttribute="leading" secondItem="isA-J2-C0l" secondAttribute="leading" constant="20" id="V0P-N8-hJC"/>
+                            <constraint firstItem="HYf-EC-Sdq" firstAttribute="top" secondItem="pA8-CS-Lna" secondAttribute="bottom" constant="7" id="W3s-oP-QSd"/>
+                            <constraint firstItem="isA-J2-C0l" firstAttribute="trailing" secondItem="pA8-CS-Lna" secondAttribute="trailing" constant="20" id="nxp-ld-7w2"/>
+                            <constraint firstItem="HYf-EC-Sdq" firstAttribute="leading" secondItem="isA-J2-C0l" secondAttribute="leading" id="qxn-xG-bAj"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="eik-zl-lyT"/>
@@ -140,6 +136,8 @@
                         <outlet property="collectionView" destination="XqU-ix-JeV" id="toi-6I-T1V"/>
                         <outlet property="container" destination="DCh-tJ-450" id="I6u-rh-aJA"/>
                         <outlet property="pageControl" destination="Ehk-mf-67t" id="ir5-P2-7ae"/>
+                        <outlet property="searchText" destination="pA8-CS-Lna" id="msJ-hV-oao"/>
+                        <outlet property="stackView" destination="5a2-nW-ud9" id="XJ8-LG-9mT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lmd-Yy-OPb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -191,9 +189,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
