--- a/Video Games/View/Base.lproj/Main.storyboard
+++ b/Video Games/View/Base.lproj/Main.storyboard
@@ -15,13 +15,122 @@
                     <view key="view" contentMode="scaleToFill" id="4fs-YR-ad4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="asf" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Kf-Yt-o1N">
+                                <rect key="frame" x="20" y="301" width="30" height="24"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                                </accessibility>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="asfd" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="You-Ff-jjc">
+                                <rect key="frame" x="20" y="333" width="30" height="18"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
+                                </accessibility>
+                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HDj-Xo-ygB">
+                                <rect key="frame" x="20" y="359" width="40" height="40"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="84" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wcx-oE-Bkf">
+                                        <rect key="frame" x="8.5" y="10" width="23" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="M55-yf-nBp"/>
+                                    <constraint firstItem="Wcx-oE-Bkf" firstAttribute="centerX" secondItem="HDj-Xo-ygB" secondAttribute="centerX" id="SNo-kH-JzB"/>
+                                    <constraint firstItem="Wcx-oE-Bkf" firstAttribute="centerY" secondItem="HDj-Xo-ygB" secondAttribute="centerY" id="Yhn-QB-PUA"/>
+                                    <constraint firstAttribute="height" constant="40" id="kec-mk-1Ah"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qtq-r5-5m3">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="293"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
+                                </accessibility>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BbP-uj-obc">
+                                <rect key="frame" x="10" y="409" width="394" height="399"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CtV-Xm-iaI">
+                                        <rect key="frame" x="10" y="0.0" width="374" height="399"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="CtV-Xm-iaI" firstAttribute="top" secondItem="NNQ-xt-fKE" secondAttribute="top" id="9od-WS-fhA"/>
+                                    <constraint firstAttribute="trailing" secondItem="CtV-Xm-iaI" secondAttribute="trailing" constant="10" id="BMv-s8-1Yt"/>
+                                    <constraint firstItem="CtV-Xm-iaI" firstAttribute="centerY" secondItem="BbP-uj-obc" secondAttribute="centerY" id="BPc-tK-2lq"/>
+                                    <constraint firstAttribute="bottom" secondItem="CtV-Xm-iaI" secondAttribute="bottom" constant="10" id="Lkf-9I-zFz"/>
+                                    <constraint firstItem="CtV-Xm-iaI" firstAttribute="leading" secondItem="NNQ-xt-fKE" secondAttribute="leading" constant="10" id="Xbm-Lu-eg0"/>
+                                    <constraint firstItem="CtV-Xm-iaI" firstAttribute="centerX" secondItem="BbP-uj-obc" secondAttribute="centerX" id="cu6-vs-5bO"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="dVP-bo-0Ag"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="NNQ-xt-fKE"/>
+                            </scrollView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hand.thumbsup" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="hEe-dp-7ut">
+                                <rect key="frame" x="354" y="253" width="40" height="41"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="3nU-dg-Zzi"/>
+                                    <constraint firstAttribute="height" constant="40" id="5np-jx-9CW"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="eTv-3D-oBI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HDj-Xo-ygB" firstAttribute="leading" secondItem="You-Ff-jjc" secondAttribute="leading" id="0If-IG-xJU"/>
+                            <constraint firstItem="BbP-uj-obc" firstAttribute="leading" secondItem="4fs-YR-ad4" secondAttribute="leading" constant="10" id="0eF-Ag-Nv8"/>
+                            <constraint firstItem="eTv-3D-oBI" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="You-Ff-jjc" secondAttribute="trailing" symbolic="YES" id="18w-ha-PQH"/>
+                            <constraint firstItem="eTv-3D-oBI" firstAttribute="trailing" secondItem="hEe-dp-7ut" secondAttribute="trailing" constant="20" id="6kc-XN-Gde"/>
+                            <constraint firstItem="qtq-r5-5m3" firstAttribute="trailing" secondItem="eTv-3D-oBI" secondAttribute="trailing" id="CDg-eJ-wXq"/>
+                            <constraint firstItem="qtq-r5-5m3" firstAttribute="leading" secondItem="eTv-3D-oBI" secondAttribute="leading" id="Fcr-eL-sJ2"/>
+                            <constraint firstItem="0Kf-Yt-o1N" firstAttribute="leading" secondItem="eTv-3D-oBI" secondAttribute="leading" constant="20" id="Gkg-Qb-oto"/>
+                            <constraint firstItem="0Kf-Yt-o1N" firstAttribute="top" secondItem="qtq-r5-5m3" secondAttribute="bottom" constant="8" symbolic="YES" id="L4t-mb-p2J"/>
+                            <constraint firstAttribute="trailing" secondItem="BbP-uj-obc" secondAttribute="trailing" constant="10" id="LTf-gL-PIP"/>
+                            <constraint firstItem="eTv-3D-oBI" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="0Kf-Yt-o1N" secondAttribute="trailing" symbolic="YES" id="OXb-Cg-SOf"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="BbP-uj-obc" secondAttribute="bottom" id="Q7o-G8-Sne"/>
+                            <constraint firstItem="eTv-3D-oBI" firstAttribute="bottom" secondItem="HDj-Xo-ygB" secondAttribute="bottom" constant="409" id="aoj-wg-lgh"/>
+                            <constraint firstItem="You-Ff-jjc" firstAttribute="top" secondItem="0Kf-Yt-o1N" secondAttribute="bottom" constant="8" symbolic="YES" id="bzM-Iu-rjj"/>
+                            <constraint firstItem="BbP-uj-obc" firstAttribute="centerX" secondItem="qtq-r5-5m3" secondAttribute="centerX" id="jBy-bR-h5R"/>
+                            <constraint firstItem="You-Ff-jjc" firstAttribute="leading" secondItem="eTv-3D-oBI" secondAttribute="leading" constant="20" id="oNh-nE-FoQ"/>
+                            <constraint firstItem="qtq-r5-5m3" firstAttribute="top" secondItem="eTv-3D-oBI" secondAttribute="top" id="vtz-CC-E3z"/>
+                            <constraint firstItem="HDj-Xo-ygB" firstAttribute="top" secondItem="You-Ff-jjc" secondAttribute="bottom" constant="8" symbolic="YES" id="xhZ-hW-aeH"/>
+                            <constraint firstItem="BbP-uj-obc" firstAttribute="top" secondItem="HDj-Xo-ygB" secondAttribute="bottom" constant="10" id="yMl-Cz-SDd"/>
+                            <constraint firstItem="hEe-dp-7ut" firstAttribute="top" secondItem="eTv-3D-oBI" secondAttribute="top" constant="254" id="zJu-U1-dGC"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="descriptionText" destination="CtV-Xm-iaI" id="LJu-TT-czd"/>
+                        <outlet property="favButton" destination="hEe-dp-7ut" id="tjM-AX-k5U"/>
+                        <outlet property="gameImage" destination="qtq-r5-5m3" id="qtt-3k-Y8p"/>
+                        <outlet property="gameName" destination="0Kf-Yt-o1N" id="ERK-Sy-96w"/>
+                        <outlet property="gameReleaseDate" destination="You-Ff-jjc" id="rCW-HN-Izs"/>
+                        <outlet property="pointText" destination="Wcx-oE-Bkf" id="H9P-Sg-HPO"/>
+                        <outlet property="pointView" destination="HDj-Xo-ygB" id="eOO-TZ-1WI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tUF-4Q-2cY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="811" y="825"/>
+            <point key="canvasLocation" x="810.14492753623199" y="825"/>
         </scene>
         <!--Page Content View Controller-->
         <scene sceneID="nmm-5U-1kD">
@@ -178,10 +287,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aCk-L0-8F4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1664" y="422"/>
+            <point key="canvasLocation" x="1663.7681159420292" y="421.875"/>
         </scene>
     </scenes>
     <resources>
+        <image name="hand.thumbsup" catalog="system" width="128" height="128"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
